--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -16,10 +16,7 @@
   display: flex;
   gap: 0.8rem;
   flex-wrap: wrap;
-
-  @media screen and (max-width: 900px) {
-    justify-content: center;
-  }
+  justify-content: center;
 
   span {
     padding: 0.35rem 0.9rem;
@@ -36,10 +33,11 @@
 .skills__layout {
   margin-top: 2.5rem;
   display: grid;
-  grid-template-columns: repeat(2, minmax(34rem, 1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 2rem;
+  width: inherit;
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 1130px) {
     grid-template-columns: 1fr;
   }
 }
